Added basic implementations for more methods which threw NotImplementedException

--- a/FakeDbProvider/FakeDbProvider.csproj
+++ b/FakeDbProvider/FakeDbProvider.csproj
@@ -6,4 +6,8 @@
     <RootNamespace>Goodwin.John.Fakes.FakeDbProvider</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NLog" Version="5.0.0-beta11" />
+  </ItemGroup>
+
 </Project>
