--- a/FakeDbProvider/FakeDbProvider.csproj
+++ b/FakeDbProvider/FakeDbProvider.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NLog" Version="5.0.0-beta11" />
+    <PackageReference Include="NLog" Version="4.6.3" />
   </ItemGroup>
 
 </Project>
